Change Log for OpenXava project
===============================

- Driver versions in doc and new projects upgraded for MySQL, PostgreSQL, Oracle and MS SQL Server.
- Hibernate upgraded to 5.6.11.
- Hibernate Envers upgraded to 5.6.11.
- Groovy upgraded to 4.0.5.
- Jersey upgraded to 2.37.
- Fix: Some messages in log not translated when using a JVM language other than English, Spanish or Chinese. 
- Fix: @Coordinates editor does not work in development environment or starting from command line. 
- Documentation for IntelliJ updated to use Maven.
- Lesson 26 of course translated to Chinese, so now the whole course is in Chinese.

OpenXava 7.0 (2022-9-19)
------------------------
- Maven support.
- It's possible to develop/run using command line and plain editor with no IDE at all.
- Java 17 support.
- Tomcat 10 support.
- Removed XML components support including all related code.
- Dropped support for Liferay, WebSphere Portal, JetSpeed, portals and portlets.
- Dropped support for Tomcat 7.
- Servlet 3.1 is the minimum specification version supported.
- All EJB related code removed.
- The methods usesAnnotatedPOJO() and isPortalEnabled() removed from ModuleTestBase.
- IPropertyCodeGenerator interface removed.
- Documentation modules are no longer supported, now they are just ignored.
- IPadStyle removed, it was not enabled by default since v5.0.
- The usage of styles.properties to register styles is removed.
- Removed emailAsUserNameInPortal and portletLocales from xava.properties.
- MapFacade and MapFacadeBean are no longer EJB Session Beans. 
- IRemoteAction interface and Server utility class removed.
- Removed DocumentLibrary editor for attaching documents using Liferay document library.
- Removed XHibernate and HibernatePersistenceProvider, though Hibernate API is still available.
- Removed JDBCTabProvider, used to get list data via JDBC, only used for XML components.
- JasperReports upgraded to 6.20.
- Apache POI upgraded to 5.1.