@@ -1,4 +1,5 @@
-# mvn clean archetype:create-from-project -Darchetype.properties="archetype.properties" 
+# mvn clean archetype:create-from-project -Darchetype.properties="archetype.properties"
+# Copy archetype-metadata.xml to target/generated-sources/archetype/src/main/resources/META-INF/maven 
 # To deploy to Maven Central copy archetype-pom.xml to target/generated-sources/archetype 
 #   and change the version number
 
@@ -6,6 +7,4 @@ archetype.groupId=org.openxava
 archetype.artifactId=openxava-archetype-spanish
 archetype.package=org.openxava.archetype
 archetype.version=7.0.1-SNAPSHOT
-# TMR
-archetype.encoding=ISO-8859-1
 excludePatterns=temp/,data/*,LICENSE.txt,archetype-pom.xml
