@@ -27,6 +27,7 @@
     &lt;groupId&gt;net.sf.jt400&lt;/groupId&gt;
     &lt;artifactId&gt;jt400&lt;/artifactId&gt;
     &lt;version&gt;11.0&lt;/version&gt;
+    &lt;classifier&gt;jt400_jdk8&lt;/classifier&gt;
 &lt;/dependency&gt;
 </code></pre>Maybe the above code is already in your <i>pom.xml</i> but
         commented, in that case just uncomment it.</div>
@@ -114,5 +115,6 @@ $ mvn install
           OpenXava Studio.</p>
       </div>
     </div>
+    
   </body>
 </html>
