@@ -12,7 +12,7 @@
       <h1 id="toc0"> <span id="breadcrumbs"> <span id="openxava"> <a href="https://www.openxava.org/">
               <span>o</span>pen<span>x</span>ava </a> </span> / <a href="index_es.html">documentación</a>
           / </span> Configuración para AS/400</h1>
-      <i>Si estás usando una versión de OpenXava anterior a la 7.0 mira las <a
+      <i>Si estás usando una versión de OpenXava anterior a la 7.0 mira las <a
           href="as400-ox6_es.html">instrucciones antiguas</a></i>
       <div class="wiki" style="display: block;">Configurar tu aplicación
         OpenXava contra la DB2 de un AS/400 es muy fácil, básicamente has de
@@ -27,6 +27,7 @@
     &lt;groupId&gt;net.sf.jt400&lt;/groupId&gt;
     &lt;artifactId&gt;jt400&lt;/artifactId&gt;
     &lt;version&gt;11.0&lt;/version&gt;
+    &lt;classifier&gt;jt400_jdk8&lt;/classifier&gt;
 &lt;/dependency&gt;
 </code></pre>Quizás ya tengas este código en tu <i>pom.xml</i> pero comentado,
         en ese caso simplemente descoméntalo.</div>
