@@ -1,6 +1,8 @@
 Change Log for OpenXava project
 ===============================
 
+- Fix: New project created from openxava-archetype-spanish contains unknown characters for accents.
+- Fix: Connection to AS/400 fails using the default dependency in new projects pom.xml and docs. 
 - Driver versions in doc and new projects upgraded for MySQL, PostgreSQL, Oracle and MS SQL Server.
 - Hibernate upgraded to 5.6.11.
 - Hibernate Envers upgraded to 5.6.11.
